pamc/src/tests/sample_code/should_succeed/multi_file/no_warnings/let_not_leaky_because_its_opaque/src/mod.ph
pub type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let priv_fun = fun _(n: Nat): Nat {
    Nat.S(n)
};

pub let value_uses_priv_item = priv_fun(Nat.O);
