pamc/src/tests/sample_code/should_fail/ast_simplification/labeled_params/unlabeled_before_explicit.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let f = fun (x: Nat, yellow~y: Nat): Nat {
    Nat.O
};
